tests/should_succeed/termination/recursion_logic.coma
module M_variant_int
  use int.Int
  
  predicate ge_log_Int [@inline:trivial] (self: int) (other: int) = other <= self
  
  meta "rewrite_def" predicate ge_log_Int
  
  predicate gt_log_Int [@inline:trivial] (self: int) (other: int) = other < self
  
  meta "rewrite_def" predicate gt_log_Int
  
  predicate well_founded_relation_Int [@inline:trivial] (self: int) (other: int) =
    ge_log_Int self 0 /\ gt_log_Int self other
  
  meta "rewrite_def" predicate well_founded_relation_Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  constant x : int
  
  function variant_int (x: int) : int
  
  goal vc_variant_int: ge_log_Int x 0
    -> (if x = 0 then
      [@stop_split] [@expl:variant_int ensures] 0 = x
    else
      (([@stop_split] [@expl:variant_int requires] ge_log_Int (x - 1) 0)
        /\ ([@expl:variant decreases] well_founded_relation_Int x (x - 1)))
      /\ (([@stop_split] [@expl:variant_int ensures] variant_int (x - 1) = x - 1)
      -> ([@stop_split] [@expl:variant_int ensures] 1 + variant_int (x - 1) = x))
    )
end
